--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.3",
     "node": "^20.2.0",
     "react": "18.2.0",
+    "react-animated-heart": "^0.0.8",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   }
