--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-animated-heart": "^0.0.8",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.12.1",
     "typescript": "5.0.4"
   }
 }
